# kineticEQ

./: .gitignore  CMakeLists.txt  README.md  config.json  debug_dnu_tau_sweep.json  log.jsonl  pyproject.toml
.github/workflows/: docs.yml  wheel.yaml
docs/: _config.yaml  index.md  memo.ipynb
docs/BGK1D_demo/: consisterm.ipynb  crosstest.ipynb  setup.ipynb
docs/BGK2D2V_demo/: setup.ipynb
docs/Implementations/: analysis_and_cnn.md  api_layer.md  core_layer.md  cuda_kernels.md  index.md  legacy.md  package_map.md  support_modules.md
docs/Models/: index.md
docs/Models/BGK1D1V/: boundary_conditions.md  index.md  whiteboard.md
docs/Models/BGK2D2V/: index.md
docs/_includes/: head_custom.html  header_custom.html  keq_banner.html
docs/_legacy/: BGK1D+HOLO.ipynb  BGK2D2V.ipynb
docs/_legacy/BGK1D_demo/: Acc_benchmark.ipynb  Conv_test.ipynb  consisterm.ipynb  crosstest.ipynb
docs/_legacy/demo/: Acc_benchmark.ipynb  Conv_test.ipynb
docs/api/: api_lib.md  index.md
docs/api_Reference/: api_lib.md  index.md
docs/assets/css/: keq-docs.css
docs/assets/js/: keq-docs.js
docs/demo/: Acc_benchmark.ipynb  Conv_test.ipynb  consisterm.ipynb  crosstest.ipynb  setup.ipynb
docs/en/: index.md
docs/en/Implementations/: analysis_and_cnn.md  api_layer.md  core_layer.md  cuda_kernels.md  index.md  legacy.md  package_map.md  support_modules.md
docs/en/Models/: index.md
docs/en/Models/BGK1D1V/: boundary_conditions.md  index.md  whiteboard.md
docs/en/api_Reference/: api_lib.md  index.md
docs/en/getting-started/: Engine_overview.md  examples.md  index.md  installation.md
docs/getting-started/: Engine_overview.md  examples.md  index.md  installation.md
docs/ja/: index.md
docs/tutorials/: basic.md
src/: BGK1Dsim.py  gtsv_batch.cu  progress_bar.py
src/extension/_fortran/: Sample_1D_advection.f90
src/kineticEQ/: BGK1DPlotUtil.py  BGK1D_old.py  BGK1Dsim.py  BGK2D2VPlotUtil.py  BGK2D2V_core.py  BGK2Dsim.py  __init__.py
src/kineticEQ/_legacy/: BGK1DPlotUtil.py  BGK1Dsim.py  BGK2D2V_core.py
src/kineticEQ/analysis/: __init__.py
src/kineticEQ/api/: __init__.py  config.py  engine.py  logging_utils.py  result.py  simulation.py
src/kineticEQ/backends/: Sample_1D_advection_by_fortran.py  __init__.py
src/kineticEQ/core/: state_1d.py  state_2d2v.py
src/kineticEQ/cpu_kernel/: __init__.py  compile.py
src/kineticEQ/cuda_kernel/: compile.py
src/kineticEQ/params/: BGK1D1V_params.py  BGK2D2V_params.py  __init__.py  registry.py
src/kineticEQ/plotting/: __init__.py
src/kineticEQ/utillib/: device_util.py  pretty.py  progress_bar.py
tests/: chech.py  check.py  conftest.py  test_cpu.py  test_cuda.py
tests/base/: base_test.py
tests/bench_test/: test_bench_BGK1D.py  test_bench_BGK1D_cpu.py  test_bench_BGK1D_cuda.py  test_cross_cuda.py  test_cvg_BGK1D_cuda.py  test_grid_bench_BGK1D_cuda.py  test_time_bench_BGK1D_cuda.py
tests/benchmarks/: Time_Bench_explicit.py  Time_Bench_implicit.py  acc_test.py  convergence_test.py
tests/plot_test/: plot_test_cpu.py  plot_test_cuda.py  test_plot_cpu.py  test_plot_cuda.py  test_plot_cuda_kernel.py  test_plot_cuda_torch.py
tests/smoke/: test_cpu.py  test_cpu_kernel.py  test_cuda.py
tests/unit/: test_bgk1d_momentcnn_weight.py
(+150 files in other folders)
