[project]
name = "kineticEQ"
version = "0.3.0"
description = "kinetic equation solvers"
authors = [{ name = "Minamium", email = "arcadia.battery@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "torch>=2.0",
  "scipy",
  "ninja",
  "wheel",
  "setuptools"
]

[project.optional-dependencies]
viz = ["matplotlib", "plotly>=5"]