[project]
name = "kineticEQ"
version = "1.9.0"
description = "kinetic equation solvers"
authors = [{ name = "Minamium", email = "minamium.shukunami@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "torch>=2.0",
  "scipy",
  "ninja",
  "wheel",
  "setuptools"
]

[project.optional-dependencies]
viz = ["matplotlib", "plotly>=5"]

[tool.pytest.ini_options]
addopts = "-s"