[project]
name = "kineticEQ"
version = "2.1.1"
description = "kinetic equation GPU solvers"
authors = [{ name = "Minamium", email = "minamium.shukunami@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "torch>=2.0",
  "scipy",
  "tqdm",
  "ninja",
  "wheel",
  "setuptools",
  "zarr",
  "numcodecs"
]

[project.optional-dependencies]
viz = ["matplotlib", "plotly>=5"]

[tool.pytest.ini_options]
addopts = "-s"
log_cli = true